--- a/src/app/gifs/resultado/resultado.component.html
+++ b/src/app/gifs/resultado/resultado.component.html
@@ -5,7 +5,7 @@
 </ul> -->
 
 <div class="row">
-    <div *ngFor="let gif of resultados" class="col-md-4 col-sm-6">
+    <div *ngFor="let gif of resultados" class="col-md-4 col-sm-6 animate__animated animate__fast animate__fadeIn">
 <div class="card">
     <img [src]="gif.images.downsized_medium.url" [alt]="gif.title">
     <div class="card-body">
@@ -13,7 +13,6 @@
             {{gif.title}}
         </p>
     </div>
-
 </div>
     </div>
 </div>
